--- a/test-resource-service/src/main/resources/application.properties
+++ b/test-resource-service/src/main/resources/application.properties
@@ -7,6 +7,9 @@ resource.server.introspect.user=admin
 resource.server.introspect.password=admin
 resource.server.userinfo.link=https://localhost:9443/oauth2/userinfo
 
+resource.server.revoke.link =https://localhost:9443/oauth2endpoints/revoke
+resource.server.revoke.user=admin
+resource.server.revoke.password=admin
 
 
 
