--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,14 @@
 
     <modules>
         <module>test-resource-service</module>
+        <module>test-oauth-client</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <oauth.version>2.3.3.RELEASE</oauth.version>
     </properties>
 
     <dependencies>
